[gd_scene load_steps=7 format=3 uid="uid://bpxbvar47ut1r"]

[ext_resource type="Script" path="res://menu.gd" id="1_0iety"]
[ext_resource type="Texture2D" uid="uid://cmjwpcsvwhful" path="res://Background.png" id="2_v0xir"]
[ext_resource type="Theme" path="res://themeVBox.tres" id="3_pj6vy"]
[ext_resource type="Texture2D" uid="uid://8sp4aa3h2yut" path="res://logoDefenseasFinal.png" id="4_7c8dv"]

[sub_resource type="Theme" id="Theme_p0og5"]

[sub_resource type="Theme" id="Theme_knox6"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = -1.0
offset_right = -694.0
offset_bottom = -907.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0iety")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(482, 512)
scale = Vector2(0.972222, 0.963889)
texture = ExtResource("2_v0xir")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
self_modulate = Color(0.548026, 0.337767, 9.62615e-08, 1)
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 4.289
anchor_top = 2.742
anchor_right = 4.289
anchor_bottom = 2.742
offset_left = -1172.83
offset_top = 211.444
offset_right = -405.833
offset_bottom = 707.444
theme = ExtResource("3_pj6vy")
theme_override_constants/separation = 20

[node name="LancerPartie" type="Button" parent="VBoxContainer"]
modulate = Color(0.02, 0.771334, 1, 1)
z_index = 1
custom_minimum_size = Vector2(20, 0)
layout_direction = 2
layout_mode = 2
size_flags_stretch_ratio = 0.0
focus_neighbor_top = NodePath("../Fermer")
theme = SubResource("Theme_p0og5")
theme_override_colors/font_hover_color = Color(0.480231, 0.84147, 1, 1)
theme_override_constants/outline_size = 10
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
text = "Lancer une partie"

[node name="Options" type="Button" parent="VBoxContainer"]
modulate = Color(0.0196078, 0.772549, 1, 1)
layout_mode = 2
theme = SubResource("Theme_knox6")
theme_override_colors/font_hover_color = Color(0.439226, 0.831202, 1, 1)
theme_override_constants/outline_size = 10
text = "Options
"

[node name="Fermer" type="Button" parent="VBoxContainer"]
modulate = Color(0.0196078, 0.772549, 1, 1)
layout_mode = 2
focus_neighbor_bottom = NodePath("../LancerPartie")
theme_override_constants/outline_size = 10
text = "Quitter
"

[node name="LogoDefenseasFinal" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(385, -215)
scale = Vector2(0.590909, 0.527559)
texture = ExtResource("4_7c8dv")

[connection signal="pressed" from="VBoxContainer/LancerPartie" to="." method="_on_lancer_partie_pressed"]
[connection signal="pressed" from="VBoxContainer/LancerPartie" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Fermer" to="." method="_on_fermer_pressed"]
